--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "prettier": "^3.3.3"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -27,6 +28,7 @@
     "minio": "^8.0.1",
     "mongoose": "^8.7.1",
     "multer": "^1.4.5-lts.1",
-    "razorpay": "^2.9.5"
+    "sha256": "^0.2.0",
+    "uniqid": "^5.4.0"
   }
 }
