--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.7.9",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "json-rule-engine": "^0.0.3",
