--- a/backend/package.json
+++ b/backend/package.json
@@ -14,10 +14,12 @@
   "author": "Ashish",
   "license": "ISC",
   "devDependencies": {
+    "ngrok": "^5.0.0-beta.2",
     "nodemon": "^3.1.4",
     "prettier": "^3.3.3"
   },
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^5.1.6",
     "axios": "^1.7.9",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
