--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "express": "^4.21.1",
     "json-rule-engine": "^0.0.3",
     "json-rules-engine": "^6.5.0",
+    "lodash": "^4.17.21",
     "minio": "^8.0.1",
     "mongoose": "^8.7.1",
     "multer": "^1.4.5-lts.1",
