--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "dotenv": "^16.4.5",
     "embla-carousel-autoplay": "^8.3.0",
     "embla-carousel-react": "^8.3.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -49,6 +50,7 @@
   "devDependencies": {
     "@eslint/js": "^9.11.1",
     "@types/crypto-js": "^4.2.2",
+    "@types/lodash": "^4.17.15",
     "@types/node": "^22.7.5",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
