--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "firebase-admin": "^13.1.0",
     "json-rule-engine": "^0.0.3",
     "json-rules-engine": "^6.5.0",
     "lodash": "^4.17.21",
